<resources>
    <string name="app_name">Chowkabara</string>
    <string name="SHARED_PREF_NAME">com.funofuntime.chowkabara.prefs</string>
    <string name="CURRENT_PLAYERS_STATUS">players</string>
    <string name="LAST_PLAYED_PLAYERID">playerID</string>
    <string name="home">home</string>
    <string name="play_new_game">Play New Game</string>
    <string name="resume_last_game">Resume Last Game</string>
    <string name="how_to_play">How To Play</string>
    <string name="playerid">playerID</string>
    <string name="icon">Icon</string>
    <string name="status">Status</string>
    <string name="id">ID</string>
    <string name="_1">1</string>
    <string name="name">Name</string>
    <string name="pear">🍐</string>
    <string name="playing">playing..</string>
    <string name="_2">2</string>
    <string name="carrotIcon">🥕</string>
    <string name="corntIcon">🌽</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="mango">🥭</string>
    <string name="playingConfirm">playing??</string>
    <string name="start_the_game">start the game</string>
    <string name="confirm_players">confirm players</string>
    <string name="textview">TextView</string>
    <string name="roll_dice">ROLL Dice</string>
    <string name="pass">Let Next Player GO!</string>
    <string name="start_new_game">start new game</string>

</resources>