<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGame">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:text="@string/home"
        app:backgroundTint="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gameSetUpGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeButton"
        app:rowCount="4">

        <TextView
            android:id="@+id/playerIDTextView"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CDDC39"
            android:gravity="center"
            android:text="@string/id"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playerNameTextView"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CDDC39"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            tools:text="Name" />

        <TextView
            android:id="@+id/playerIconTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CDDC39"
            android:gravity="center"
            android:text="@string/icon"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playerStatusTextView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CDDC39"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player1IDTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player1Name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player1Icon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pear"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player1Status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/playing"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/player2IDTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player2Name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player2Icon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/carrotIcon"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player2Status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/playing"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/player3IDTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player3Name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player3Icon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/corntIcon"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player3Status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/playingConfirm"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/player4IDTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_4"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player4Name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/player4Icon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mango"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player4Status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/playingConfirm"
            android:textSize="14sp" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/start_the_game"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmPlayersButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#FF9800"
        android:text="@string/confirm_players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>