<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chowkabaraMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/optionsTable"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/playNewGameButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:text="@string/play_new_game" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/resumeGameButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="@string/resume_last_game" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/howToPlayGameButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>